<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Primary category">

        <SwitchPreference
            android:key="@string/key_preference_switch"
            android:summary="@string/preference_label_switch_summary"
            android:title="@string/preference_label_switch" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_preference_checkbox"
            android:title="@string/preference_label_checkbox" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Secondary category">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="@string/key_preference_edittext"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/preference_label_edittext" />

        <ListPreference
            android:key="@string/key_preference_list"
            android:title="@string/preference_label_list"
            android:dialogTitle="@string/preference_dialog_title"
            android:entries="@array/list_preference_entries"
            android:entryValues="@array/list_preference_entry_values"
            android:defaultValue="1"/>

    </PreferenceCategory>

</PreferenceScreen>