<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/notification_label_create"
        style="@style/Button.Primary.Text_Normal_White.Two_Line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_create"
        app:layout_constraintBottom_toTopOf="@+id/notification_label_dismiss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/notification_label_dismiss"
        style="@style/Button.Primary.Text_Normal_White.Two_Line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_dismiss"
        app:layout_constraintBottom_toTopOf="@+id/notification_label_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_label_create" />


    <Button
        android:id="@+id/notification_label_update"
        style="@style/Button.Primary.Text_Normal_White.Two_Line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_label_dismiss" />
</android.support.constraint.ConstraintLayout>